start layout structure with element

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <!-- Start of my layout -->
     <header>
     </header>
     <section>
@@ -14,4 +15,5 @@
     <footer>
     </footer>
 </body>
+
 </html>
