added hyperlink and target attribute

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 <body>
     <!-- Start of my layout -->
     <header>
+        <h1>Typography for Developers</h1>
     </header>
     <section>
         <article>
+            <h2>Title of the article</h2>
+            <p>Taimur Abdaal leads design at Retool, a fast way to build internal tools. They’re working on a new design system for their platform, to let anyone easily build beautiful custom apps. Typography will be a huge part of this and Taimur wrote this based on that experience. <a href="https://css-tricks.com/typography-for-developers/" target="_blank">Click here to read more</a></p>
         </article>
     </section>
     <footer>
